src/ui/Navigation/navigation.module.scss
.container {
  background-color: rgb(255 255 255);

  @media (max-width: ($tablet-width - 1)) {
    &.mobile-opened {
      position: fixed;
      inset: 0;
      padding: 0 10px 20px;

      nav {
        position: fixed;
        top: 0;
        width: 100%;
        height: 100%;
        margin-top: 60px;
        overflow-y: auto;
      }
    }
  }
}

.menu {
  display: flex;
  flex-direction: column;
  row-gap: 10px;
  align-items: flex-start;
  padding: 0;
  margin: 0;
  list-style: none;

  @media (min-width: $tablet-width) {
    flex-flow: row wrap;
    column-gap: 20px;
    font-size: $font-medium;
  }
}

.item {
  display: block;
  padding: 0;
  color: $text-primary-color;
  text-decoration: none;

  &.active {
    color: $text-active-color;
  }

  &:active {
    transform: scale(0.9);
  }

  @media (min-width: $tablet-width) {
    &:hover,
    &:focus {
      outline: none;
      transform: scale(1.1);
    }

    &:active {
      transform: scale(0.9);
    }
  }
}

.button-wrapper {
  @media (max-width: ($tablet-width - 1)) {
    position: sticky;
    top: 0;
    z-index: 1;
    padding: 20px 0 10px;
    background-color: rgb(255 255 255);
  }
}

.button {
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: pointer;
  background-color: rgb(255 255 255);
  border: none;

  &.icon {
    width: inherit;
    height: inherit;
  }

  &:active {
    transform: scale(0.9);
  }

  @media (min-width: $tablet-width) {
    display: none;
  }
}

